[package]
name = "solc"
description = "Solidity bindings for Rust"
version = "0.1.0"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
license = "GPL-3.0"
repository = "https://github.com/axic/solc-rust"
homepage = "https://github.com/axic/solc-rust"
keywords = ["ethereum", "solidity"]

[dependencies]

[build-dependencies]
bindgen = "0.52.0"
cmake = "0.1"
